@@ -1,6 +1,7 @@
 1.15
  * Bug Fixes:
    * mutagen.File: Import order no longer affects what type is returned.
+   * mutagen.id3: Compression of frames is now disabled.
 
 1.14 - 2008.05.31
  * Bug Fixes:
